@@ -1,3 +1,7 @@
+2007-09-18  Dmitry Dulepov  <dmitry@typo3.org>
+
+ * Removed "DEFAULT '0'" from "uid" column in tx_realurl_uniqalias
+
 2007-09-14  Dmitry Dulepov  <dmitry@typo3.org>
 
  * If decoded entry is not in cache, it will be added there when TSFE has completed request
